crates/plotnik-lib/tests/02-parser/recovery_unexpected/empty_alternation_after_garbage.txt
[^^^ @name]
==== diagnostics ====
error: empty `[]` matches nothing
 --> query.ptk:1:1
  |
1 | [^^^ @name]
  | ^^^^^^^^^^^
  |
help: alternations must contain at least one branch

error: unexpected token
 --> query.ptk:1:2
  |
1 | [^^^ @name]
  |  ^^^
  |
help: expected a branch, or `]` to close

error: unexpected token
 --> query.ptk:1:6
  |
1 | [^^^ @name]
  |      ^^^^^
  |
help: expected a branch, or `]` to close
